change inkDrop from scaling to changing height to prevent flickering

--- a/css/contentImg.css
+++ b/css/contentImg.css
@@ -46,6 +46,19 @@
 	font-size: 18px;
 	text-align: center;
 }
+.content-img-button {
+	display: block;
+	display: inline-block;
+	padding: 18px 14px;
+	margin: calc(var(--sbw) / 2);
+	color: rgb(var(--bg));
+	background-color: rgb(var(--fg));
+	font-family: 'PT Mono', monospace;
+	font-size: 16px;
+	text-decoration: none;
+	border-radius: 3px;
+	box-shadow: 0 2px 3px 1px rgba(var(--fg), 0.15);
+}
 .content-img-credit {
 	position: absolute;
 	bottom: 0;
@@ -59,7 +72,6 @@
 	text-shadow: 1px 1px 2px rgba(var(--fg));
 	transition: color 200ms;
 }
-
 .content-img-credit:hover {
 	color: rgba(var(--fd), 0.9);
 }
